link logbackMDCAdapter in LoggerContext, fixes LOGBACK-1742
Signed-off-by: Ceki Gulcu <ceki@qos.ch>